manifests/cluster/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  selector:
    app: homer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
