manifests/cluster/homer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homer
  namespace: homer
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homer.cowlab.org`)
      kind: Rule
      services:
        - name: homer
          port: 8080
